--- a/.forestry/front_matter/templates/journal.yml
+++ b/.forestry/front_matter/templates/journal.yml
@@ -32,9 +32,8 @@ fields:
       file: data/authors/nichlas-w-andersen.json
     required: true
     options:
-    - Nichlas W. Andersen
     - FF
   label: Author
-  default: Nichlas W. Andersen
+  default: FF
 pages:
 - journal/macos-development-environment.md
